test/conformance/chainsaw/verify-images/clusterpolicy/standard/keyed-basic-namespace-selector/chainsaw-step-01-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    signed: "true"
  name: test-verify-images
