test/conformance/chainsaw/verify-images/clusterpolicy/standard/keyed-basic-namespace-selector/chainsaw-step-02-apply-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-signed-pod
  namespace: test-verify-images
spec:
  containers:
  - image: ghcr.io/kyverno/test-verify-image:signed
    name: test-secret
