test/conformance/chainsaw/verify-images/clusterpolicy/standard/keyed-basic-namespace-selector/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: keyed-basic-namespace-selector
spec:
  concurrent: false
  timeouts:
    delete: 2m
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1.yaml
    - apply:
        file: chainsaw-step-01-apply-2.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: keyed-basic-ns-selector-policy
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - assert:
        file: chainsaw-step-02-assert-1.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-unsigned.yaml
    - apply:
        file: pod-signed.yaml
    - apply:
        file: pod-unprotected-ns.yaml
